2002-02-28  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/objc-gnu2next.h: Add objc-runtime.h
	* Source/Makefile.preamble: Add ..DEPEND_UPON for all darwin versions.

	* Source/NSPortCoder.m
	(-initWithReceivePort:sendPort:components:): Change cast to make
	MacOSX compiler happy.

2002-02-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUser.m: rewrite user and defaults root code to standardise
	and to use .GNUsteprc configuration.  Also permit forcing of fixed
	roots at compile time.

Thu Feb 28 16:46:31 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSUser.m (NSSearchPathForDirectoriesInDomains): Changed
	'Apps' to read 'Applications'.

2002-02-27  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/GSString.m ([GSMutableString -substringWithRange:]): 
	create a new string which size is the range length, not the original
	string's length.

2002-02-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.c: Removed obsolete code for shrinking data structures.
	Added memmove() for overlapped memory moves (Alexander Malmberg) and
	removed a couple of obsolete functions.
	* Source/GSValue.m: attempt to correct encoding.
	* Source/NSKeyValueCoding.m: Fix termination of method names with nuls
	from report by Manuel Guesdon.
	* Source/NSDictionary.m: Implement MacOS-X compatible KVC behavior.
	Include webobjects/eof extension, with warnings.
	* Headers/Foundation/NSProtocolChecker.h: Change deprecated import to
	include.

2002-02-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.c: Improve fetching interface info on mingw ...
	ignore non-internet interfaces.
	NB. The mingw winsock2.h header is buggy ... to work properly
	you need to change the size of a struct sockaddr field from
	sa_data[14] to sa_data[22]

Tue Feb 26 18:01:26 2002  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSBundle.m: Removed all _releasedBundles machinery.
	Removed custom implementation of -release.  Retain a bundle after